--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Momo-Book</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
 </head>
  <body>
@@ -19,8 +21,8 @@
                      <ul>
                          <li><a href="index.html">Inicio</a></li>
                          <li><a href="recomendaciones.html">Recomendaciones</a></li>
-                         <li><a href="#">Sobre mi</a></li>
-                         <li><a href="#">Contacto</a></li>
+                         <li><a href="sobremi.html">Sobre mi</a></li>
+                         <li><a href="contacto.html">Contacto</a></li>
                      </ul>
                  </nav>
              </div>
