--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
    
 
     <link rel="stylesheet" href="style.css">
+    <!-- Primary Meta Tags -->
+
+<meta name="title" content="Momo-Book" />
+<meta name="description" content="Recomendaciones de libros" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://javieracpb.github.io/Momo-Book/" />
+<meta property="og:title" content="Momo-Book" />
+<meta property="og:description" content="Recomendaciones de libros" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://javieracpb.github.io/Momo-Book/" />
+<meta property="twitter:title" content="Momo-Book" />
+<meta property="twitter:description" content="Recomendaciones de libros" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 </head>
  <body>
     
