--- a/sobremi.html
+++ b/sobremi.html
@@ -6,6 +6,26 @@
     <title>Momo-Book</title>
         <link rel= "stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!-- Primary Meta Tags -->
+
+<meta name="title" content="Momo-Book" />
+<meta name="description" content="Recomendaciones de libros" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://javieracpb.github.io/Momo-Book/" />
+<meta property="og:title" content="Momo-Book" />
+<meta property="og:description" content="Recomendaciones de libros" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://javieracpb.github.io/Momo-Book/" />
+<meta property="twitter:title" content="Momo-Book" />
+<meta property="twitter:description" content="Recomendaciones de libros" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
         
 
 </head>
