--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container-cover">
         <div class="container-cover-info">
         <h1>MomoBook</h1>
-            <p>Minions ipsum tulaliloo bappleees poopayee belloo! Hana dul sae belloo! Poulet tikka masala ti aamoo! Poopayee bananaaaa po kass. Aaaaaah po kass la bodaaa pepete wiiiii aaaaaah poulet tikka masala tulaliloo.</p>
+            <p>"Cuanto más leas, más cosas sabrás. Cuantas más cosas aprendas, a más lugares viajarás".</p>
         </div>
      </div>
      
